Change more Collectors to the new toList method (#2315)